@@ -7,9 +7,9 @@ solution: Experience Manager, Experience Manager Sites
 feature: Deploying
 role: Admin
 exl-id: 93dc74b3-dfe3-442f-9dec-1b7af41cd4a1
-source-git-commit: d353cde4e9cc2af738e600d5a9b74928d98496cb
+source-git-commit: 90e63ad3be32b7ce551c5e3579c722ef75d97f95
 workflow-type: tm+mt
-source-wordcount: '1542'
+source-wordcount: '1564'
 ht-degree: 0%
 
 ---
@@ -48,10 +48,16 @@ AEM的預設連線埠為4502。 如果該連線埠無法使用或已使用，Qui
 
 如果您執行Oracle Java 17或Java 21，啟動AEM時必須在命令列中新增其他引數。
 
-以下範例說明在Java 17/Java 21上啟動AEM時，其他JVM引數的外觀：
+* 以下範例說明在Java 17/Java 21上啟動AEM時，其他JVM引數的外觀：
 
 ```shell
 -XX:+UseG1GC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=org.apache.sling.commons.threads -Djdk.util.zip.disableZip64ExtraFieldValidation=true
+```
+
+* [僅限Forms]以下提供範例，確保AEM Forms可搭配Java 17/Java21正常運作，並包含下列其他JVM引數：
+
+```shell
+--add-opens=java.base/java.util=ALL-UNNAMED -add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED
 ```
 
 ## 執行模式 {#run-modes}
@@ -120,7 +126,7 @@ AEM的預設連線埠為4502。 如果該連線埠無法使用或已使用，Qui
 >
 >安裝AEM即服務時，您必須從Configuration Manager為`com.adobe.xmp.worker.files.ncomm.XMPFilesNComm`中的記錄檔目錄提供絕對路徑。
 
-若要解除安裝服務，請在&#x200B;**服務**&#x200B;控制檯中按一下&#x200B;**停止**，或在命令列中，瀏覽至資料夾並輸入`instsrv.bat -uninstall cq5`。 當您輸入`net start`時，服務會從&#x200B;**服務**&#x200B;控制檯的清單或命令列的清單中移除。
+若要解除安裝服務，請在&#x200B;**服務**&#x200B;控制檯中按一下&#x200B;**停止**，或在命令列中，瀏覽至資料夾並輸入`instsrv.bat -uninstall cq5`。 當您輸入&#x200B;**時，服務會從**&#x200B;服務`net start`控制檯的清單或命令列的清單中移除。
 
 ## 重新定義臨時工作目錄的位置 {#redefining-the-location-of-the-temporary-work-directory}
 
